--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<div class="container">
-  <mat-card>
-    <div class="row">
-      <div class="col-md-6 mx-auto">Hi</div>
-      <div class="col-md-6 mx-auto">Hello</div>
-    </div>
-  </mat-card>
-</div>
+<app-searchbar></app-searchbar>
+
+<app-resultbar></app-resultbar>
